--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,24 @@
-.container{
-	border: 2px solid #000;
-	width: 20em;
+html,body{
+  width:100%;
+  height:100%;
+  margin:0px;
+  padding:0px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  text-align: center;
+  font-family: 微軟正黑體;
 }
+body{
+	background-image: url(../images/image1.jpg);
+    background-size: cover;
+    background-attachment:fixed; /* 背景固定不動*/
 
+}
 .row{
-	margin:10px;
+	margin:20px;
+}
+.btn{
+	width:200px;
+	font-size:30px;
 }
